Befor droping database and after adding CourseData

--- a/Aids/Aids.csproj
+++ b/Aids/Aids.csproj
@@ -3,9 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
     <AssemblyName>$(SolutionName).$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>$(SolutionName).$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="Contoso.Tests"/>
+	</ItemGroup>
 </Project>
