--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -1,15 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
     <AssemblyName>$(SolutionName).$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>$(SolutionName).$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+	  <InternalsVisibleTo Include="Contoso.Tests" />
+	  <InternalsVisibleTo Include="Contoso.Facade" />
+	  <InternalsVisibleTo Include="Contoso.Infra" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="17.5.0" />
   </ItemGroup>
 
 </Project>
