--- a/Soft/Soft.csproj
+++ b/Soft/Soft.csproj
@@ -19,11 +19,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Infra\Infra.csproj" />
     <ProjectReference Include="..\Pages\Pages.csproj" />
+	  <InternalsVisibleTo Include="Contoso.Tests" />
   </ItemGroup>
 
 </Project>
