--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Aids\" />
-    <Folder Include="Infra\" />
+    <Folder Include="Data\Base\" />
   </ItemGroup>
 
   <ItemGroup>
