--- a/Facade/Facade.csproj
+++ b/Facade/Facade.csproj
@@ -12,4 +12,8 @@
 	<InternalsVisibleTo Include="Contoso.Tests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+  </ItemGroup>
+
 </Project>
