--- a/Soft/Soft.csproj
+++ b/Soft/Soft.csproj
@@ -24,4 +24,8 @@
 	  <InternalsVisibleTo Include="Contoso.Tests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\photos\" />
+  </ItemGroup>
+
 </Project>
